# artic

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  MANIFEST.in  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
examples/: prompts.md
plugins/claude-artic/.claude-plugin/: plugin.json
plugins/claude-artic/skills/artic/: SKILL.md
plugins/claude-artic/skills/artic/references/: init-start-lifecycle-boundary.md  presets.md  source-catalog.json
plugins/codex-artic/.codex-plugin/: plugin.json
plugins/codex-artic/skills/artic/: SKILL.md
scripts/: build_skill_archive.py  check_release_artifacts.py
skills/artic/: SKILL.md
skills/artic/references/: design-md-output-contract.md  source-catalog.json
skills/artic/references/fixtures/: voltagent-saas.design.md
skills/artic/scripts/: artic_init.py  artic_init_session.py  artic_show.py  artic_start.py  artic_update.py  artic_version.py  design_intent_mapper.py  locale_contract.py  risk_readiness.py  scaffold_artic_files.py  search_reference_catalog.py  synthesize_reference_notes.py  test_artic_scripts.py  validate_artic_outputs.py  validate_artic_strategy.py
skills/artic/templates/: DESIGN.template.md  brief.schema.json  design-rules.template.md  homepage-design-prompt.template.md  reference-synthesis.template.md  strategy-prompt.template.md  strategy.schema.json
tests/: test_artic_package.py
(+32 files in other folders)
