[project]
name = "artic"
version = "0.1.1"
description = "Reference-driven AI-native design docs for homepage generation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "baskduf"}]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
